# GameEngine

./: .gitignore  CMakeLists.txt  README.md
asset/: map.tmx
asset/animations/: CoatDoodle.xml  bird_animations.xml  bull_animations.xml  vampire_animations.xml
engine/src/: Engine.cpp  Engine.h
game/src/: Game.cpp  Game.h  glad.c  main.cpp
src/: Game.cpp  Game.h  GameObject.h  Map.cpp  Map.h  MapGeneration.cpp  MapGeneration.h  TextureManager.cpp  TextureManager.h  gameObject.cpp
src/Event/: AudioEventQueue.h
src/ecs/: Component.h  ComponentType.h  Entity.h  EventManager.h  World.cpp  World.h
src/ecs/system/: AnimationClip.h  AnimationSystem.h  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  DestructionSystem.h  GravitySystem.h  HUDSystem.h  KeyboardInputSystem.h  MovementSystem.h  PlatformSystem.cpp  PlatformSystem.h  PreRenderSystem.h  RenderSystem.h  ScreenWrapSystem.h  SpawnTimerSystem.h  UIRenderSystem.h
src/manager/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  Scene.cpp  Scene.h  SceneManager.h
src/utils/: Collision.cpp  Collision.h  CollisionObservers.cpp  CollisionObservers.h  RenderUtils.h  Vector2D.cpp  Vector2D.h
